*: refactor create backup (#829)
